# toolbucks-python

./: .gitignore  README.md  generators.py  iteration.py  patch  pyproject.toml
datatypes/: json.py
tests/: test_types_email.py
toolbucks/datatypes/: email.py
