[tool.poetry]
name = "toolbucks"
version = "0.2.8"
description = ""
authors = ["buckynbrocko <77247638+buckynbrocko@users.noreply.github.com>"]
# packages = [
#     { include = "toolbucks" }
# ]


[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.0"
pytest = "^7.2.0"
setuptools = "^65.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
